<resources>
    <string name="app_name">Sports</string>
    <string name="next_screen">NEXT SCREEN</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="name">Name*</string>
    <string name="emailId">Email Id</string>
    <string name="mobile_number">Mobile number*</string>
    <string name="e_mail">E mail</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="custom">Custom</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender</string>
    <string name="verify">Verify</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="otp_will_receive_to">OTP will receive to</string>
    <string name="edit_mobile_number"><u>Edit mobile number</u></string>
    <string name="sign_up_title_txt">Here\'s your first step with us!</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="welcome_to_the_sports_world">Welcome To The Sports World</string>
    <string name="are_you_a_anew_user">Are you a new user?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="internet_check">Check internet Connection</string>
    <string name="error_tap_to_retry">ERROR !! Tap to retry.</string>
    <string name="all">ALL</string>
    <string name="indoor">INDOOR</string>
    <string name="outdoor">OUTDOOR</string>
    <string name="personal_information">Personal Information</string>
    <string name="selected_sports">Selected Sports</string>
    <string name="views">Views</string>
    <string name="comments">Comments</string>
    <string name="Description">Description</string>
    <string name="description">About Me</string>

    <!-- image crop -->
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="title_activity_user_place_select">Map</string>
    <string name="get_my_location">Get My Location</string>
    <string name="age">Age</string>
    <string name="ok">OK</string>
    <string name="shall_we_proceed_with_selected_location">Shall we proceed with selected location?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="Apply">Apply</string>
    <string name="add">ADD</string>
    <string name="select_sport">Select Sport</string>
    <string name="select_location">Select Location</string>
    <string name="event_date_and_time">Select Event date </string>
    <string name="select_number_of_team_mates">Select number of team-mates</string>
    <string name="select_time">"Select Event Time "</string>
    <string name="signin">signin</string>
    <string name="why_location_needed">Why location needed?</string>
    <string name="need_of_location">The local tribe would like to access\n your location,with a little bit of magic.\n Your details will be protected and prefilled</string>
    <string name="confirm">Confirm</string>

</resources>
