<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.binduinfo.sports.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.binduinfo.sports.ui.fragment.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.binduinfo.sports.ui.fragment.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_selectInterestedSportsFragment"
            app:destination="@id/selectInterestedSportsFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectInterestedSportsFragment"
        android:name="com.binduinfo.sports.ui.fragment.selectinterestedsports.SelectInterestedSportsFragment"
        android:label="select_interested_sports_fragment"
        tools:layout="@layout/select_interested_sports_fragment" />
</navigation>
