<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alertMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/shall_we_proceed_with_selected_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lay_dia_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/cancel"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lay_dia_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>