<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.binduinfo.sports.ui.fragment.editprofile.ProfileEditViewModel" />

        <variable
            name="userInfo"
            type="com.binduinfo.sports.data.model.UpdateProfile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/sport_list_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/personal_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tool_bar"
            app:layout_constraintStart_toStartOf="@+id/tool_bar"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_mobile_num_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_lay_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="50"
                        android:text="@{viewModel.updateProfile.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/profile_title_gender_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/select_gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/profile_lay_name"
                    app:layout_constraintTop_toBottomOf="@+id/profile_lay_name" />

                <RadioGroup
                    android:id="@+id/profile_gender_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:onCheckedChanged="@{viewModel.onSplitTypeChanged}"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/profile_lay_name"
                    app:layout_constraintStart_toStartOf="@+id/profile_lay_name"
                    app:layout_constraintTop_toBottomOf="@+id/profile_title_gender_txt">

                    <RadioButton
                        android:id="@+id/edit_gender_male_radio"
                        style="@style/radio_button_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_left_corner"
                        android:checked="@{viewModel.updateProfile.gender.equals(`male`)}"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/edit_gender_female_radio"
                        style="@style/radio_button_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_center"
                        android:checked="@{viewModel.updateProfile.gender.equals(`female`)}"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/edit_gender_others_radio"
                        style="@style/radio_button_custom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_right_corner"
                        android:checked="@{viewModel.updateProfile.gender.equals(`other`)}"
                        android:text="@string/custom" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_lay_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/profile_lay_name"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/profile_lay_name"
                    app:layout_constraintTop_toBottomOf="@+id/profile_gender_radio">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:text="@{viewModel.updateProfile.mobileNumber}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_lay_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/profile_lay_mobile"
                    app:layout_constraintStart_toStartOf="@+id/profile_lay_mobile"
                    app:layout_constraintTop_toBottomOf="@+id/profile_lay_mobile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:text="@{viewModel.updateProfile.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_age_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/age"
                    app:layout_constraintEnd_toEndOf="@+id/profile_lay_email"
                    app:layout_constraintStart_toStartOf="@+id/profile_lay_email"
                    app:layout_constraintTop_toBottomOf="@+id/profile_lay_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_edt_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
